# libweb

./: Cargo.toml  README.md
.cargo/: config
examples/: console.rs  websocket.rs  websocket_server.rs
src/: lib.rs
src/console/: browser.rs  desktop.rs  mod.rs
src/websocket/: browser.rs  desktop.rs  mod.rs
