[package]
name = "libweb"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"

[dependencies]
failure = "0.1"
log = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ws = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
wasm-bindgen = { version = "0.2", features = ["nightly"] }
web-sys = { version = "0.3", features = [
  "console",
  "BinaryType",
  "WebSocket",
]}

[dev-dependencies]
env_logger = "*"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen-test = "0.2"